output/facebook/rocksdb/633.txt
Over here https://github.com/facebook/rocksdb/blob/master/util/thread_status_impl.cc#L103 , 1LU is used instead of 1LLU leading to these errors on a 32 bit build:

```
util/thread_status_impl.cc: In static member function ‘static std::map<std::basic_string<char>, long long unsigned int> rocksdb::ThreadStatus::InterpretOperationProperties(rocksdb::ThreadStatus::OperationType, const uint64_t*)’:
util/thread_status_impl.cc:103:54: error: left shift count >= width of type [-Werror]
           {"OutputLevel", op_properties[i] % (1LU << 32)});
                                                      ^
util/thread_status_impl.cc:103:56: error: division by zero [-Werror=div-by-zero]
           {"OutputLevel", op_properties[i] % (1LU << 32)});
                                                        ^
```

